tests/should-fail/higher-order-tv-in-adt.ls
data Foo a = Foo (a Int);

